# openstack-ansible-ops

./: .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  multi-node-aio-xenial-ansible  osa-differ.py  setup.cfg  test-requirements.txt  tox.ini
ansible_tools/: README.rst
bootstrap-embedded-ansible/: README.rst  ansible-requirements.yml  bootstrap-embedded-ansible.sh  embedded-ansible-setup.yml  osa-inventory.sh  python-requirements.txt
bowling_ball/: README.rst  rolling_restart.py  rolling_tests.py
cluster_metrics/: ansible.cfg  install.sh  playbook-grafana.yml  playbook-influx-db.yml  playbook-influx-telegraf.yml  playbook-kapacitor.yml  playbook-metrics-lb.yml  readme.rst  vars.yml
doc/: Makefile  requirements.txt
elk_metrics/: installElastic.yml  installKibana.yml  installLogstash.yml  installTopbeat.yml  loadKibana.yml  readme.rst  reverseProxyKibana.yml
elk_metrics_6x/: README.rst  ansible-role-requirements.yml  bootstrap-embedded-ansible.sh  bootstrap-embeded-ansible.sh  calculate_index_retention_default.yml  common_task_data_node_hosts.yml  common_task_install_elk_repo.yml  common_task_install_go1.10.1.yml  createElasticIndexes.yml  fieldRefresh.yml  installAPMserver.yml  installAuditbeat.yml  installCurator.yml  installElastic.yml  installFilebeat.yml  installHeartbeat.yml  installJournalbeat.yml  installKibana.yml  installLogstash.yml  installMetricbeat.yml  installMonitorStack.yml  installPacketbeat.yml  inventory.example.yml  readme.rst  setupAPMserver.yml  setupAuditbeat.yml  setupFilebeat.yml  setupHeartbeat.yml  setupJournalbeat.yml  site.yml  (+7 more)
(+1024 files in other folders)
